@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libevtx],
- [20130205],
+ [20130206],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
